# server

./: Cargo.toml
.github/workflows/: code-quality.yml
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  plugins.rs
server/src/graphql/schema/: mod.rs
src/: config.rs  graphql.rs  main.rs  plugins.rs
