[package]
name = "server"
version = "0.1.0"
authors = ["MrTimscampi <julien.machiels@protonmail.com>"]
edition = "2018"
description = "Server application for the Meiti media server"
license = "MPL-2.0"

[dependencies]
actix-web = "3.3.2"
chrono = "0.4.19"
diesel = "1.4.7"
fern = { version = "0.6.0", features = ["colored", "date-based"] }
juniper = "0.15.7"
log = "0.4.14"
