[package]
name = "server"
version = "0.1.0"
authors = ["MrTimscampi <julien.machiels@protonmail.com>"]
edition = "2018"
description = "Server application for the Meiti media server"
license = "MPL-2.0"

[dependencies]
# Web server
rocket = "0.5.0-rc.1"

# GraphQL
juniper = "0.15.7"
juniper_rocket = "0.8.0"

# Database
diesel = { version = "1.4.7", features = ["sqlite"] }
diesel_migrations = "1.4.0"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"] }

# Logging
tracing = "0.1.26"
tracing-unwrap = "0.9"
tracing-subscriber = { version = "0.2.20", features = ["fmt", "tracing-log", "chrono"] }
# diesel-tracing = "0.1.5"
fern = { version = "0.6.0", features = ["colored", "date-based"] }

# Utilities
chrono = "0.4.19"
figment = { version = "0.10", features = ["toml"] }
serde = "1.0.130"
clap = "3.0.0-beta.4"
directories = "3.0.2"
glob = "0.3.0"
libloading = "0.7.0"

meiti-common = { path = "../common"}
serde_json = "1.0.67"
toml = "0.5.8"
semver = { version = "1.0.4", features = ["serde"] }
url = { version = "2.2.2", features = ["serde"] }

sentry = "0.23.0"
